# koi-net-obsidian-manager-node

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
koi_net_obsidian_manager_node/: config.py  handlers.py  rid_types.py
src/koi_net_obsidian_manager_node/: __init__.py  __main__.py  config.py  core.py  handlers.py  obsidian_contact_handler.py
