[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koi-net-obsidian-manager-node"
version = "0.0.1"
description = "Implementation of KOI-net Obsidian manager node in Python"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net>=1.1.0b7",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "rich>=14.0.0"
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build"]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-obsidian-manager-node/"