[project]
name = "koi-net-obsidian-manager-node"
version = "0.1.0"
description = "Implementation of KOI-net Obsidian manager node in Python"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "koi-net~=2.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-obsidian-manager-node/"
